www/game/app-game.less
/*
 * SPDX-FileCopyrightText: 2023 XWiki CryptPad Team <contact@cryptpad.org> and contributors
 *
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

@import (reference) "../../customize/src/less2/include/framework.less";
@import (reference) "../../customize/src/less2/include/tools.less";
@import (reference) "../../customize/src/less2/include/avatar.less";

// body
&.cp-app-game {
    .framework_main(
        @bg-color: @colortheme_apps[game],
    );

    @cp_char-size: 40px;
    @cp-game-other-color: #6a0e03;
    @cp-game-selected-color: #ff0000;

    display: flex;
    flex-flow: column;
    max-height: 100%;
    min-height: auto;
    color: @cp_app-fg;
    background-color: @cp_app-bg;

    #cp-app-game-editor {
        display: flex;
        overflow: auto;


        #cp-app-game-container {
            span.cp-avatar-default {
                background: white;
                color: black;
            }

            flex: 1;
            #cp-app-game-config {
                padding: 1em;
                max-width: 600px;
            }
            #cp-app-game-level {
                display: flex;
            }
            #cp-app-game-players {
                border: 2px solid @cryptpad_color_brand;
                width: 200px;
                .cp-avatar {
                    .avatar_main(40px);
                    margin-right: 0.5rem;
                }
                div.cp-game-player-health-container {
                    padding: 0.5rem;
                    &:not(:first-child) {
                        margin-top: 0.5rem;
                    }
                    div.cp-game-player-container {
                        display: flex;
                        align-items: center;
                        .cp-avatar {
                            margin-right: 0.5rem;
                        }
                    }
                }
                div.cp-game-player-hp {
                    height: 20px;
                    font-weight: bold;
                    color: black;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                }
            }
            #cp-app-game-map {
                border: 2px solid @cryptpad_color_brand;
                padding: 10px;
                position: relative;

                .cp-character {
                    position: absolute;
                    width: @cp_char-size;
                    height: @cp_char-size;
                    box-sizing: border-box;
                    border: 2px solid @cp-game-other-color;
                    .avatar_main(@cp_char-size);
                    left: 500px;
                    top: 300px;
                    transition: left 100ms linear, top 100ms linear;
                    border-radius:@cp_char-size;
                    &.cp-selected {
                        border-color: @cp-game-selected-color;
                    }
                    &.cp-me {
                        outline-style: solid;
                        outline-color: #88888888;
                    }
                }
            }
            #cp-app-game-hud {
                .cp-app-game-target {
                    display: inline-flex;
                    align-items: center;
                    p {
                        margin-bottom: 0;
                        font-weight: bold;
                    }
                    div.cp-game-target-container {
                        margin-left: 1em;
                        .cp-avatar {
                            .avatar_main(40px);
                            margin-right: 0.5rem;
                        }
                        display: inline-flex;
                        align-items: center;
                    }
                }
            }
        }
    }
}

